--- a/index.html
+++ b/index.html
@@ -1032,6 +1032,7 @@
 				<div class="bullet"></div>
 				<div class="text">
 					<b class="rainbow" style="animation-delay: 2s">YES</b>:
+					Ask me about art trades!<br />
 					Show me things or ask for feedback on your art, I don't mind! :3<br />
 					Use my art or draw my characters, just so long as you give credit and don't repost my art places for your own clout!<br />
 					Drawing my OCs interacting with your OCs, if you think your characters would be friends with any of mine please go ahead, I'd love to see it!<br />
@@ -1042,10 +1043,11 @@
 			<div class="paragraph ripples" style="animation-delay: -0.75s">
 				<div class="bullet"></div>
 				<div class="text">
-					<b class="rainbow" style="animation-delay: 3s">NO</b>: Requests are somewhat closed!<br />
-					Please don't talk to me about NSFW, politics or religion, or joke about these topics or use disabilities and illnesses in your sense of humor around me!<br />
-					Proship and NSFW of minors (even if fictional), offensive Transid identities, Generative AI, Crypto, Racists, Zionists, Rightists, blah blah blah, that stuff is all a no from me!<br />
-					Please don't take it personally if our friendship would be incompatible or try to pressure me into one!<br />
+					<b class="rainbow" style="animation-delay: 3s">NO</b>: Requests are usually closed!<br />
+					Please don't talk to me about NSFW or politics, and please ask if I am comfortable first before talking about religion<br />
+					Please do not use disabilities and illnesses in your sense of humor around me (eg "that's acoustic", "that's cancerous", it just makes me uncomfortable!)<br />
+					Proship and NSFW of minors (even if the minor is fictional), transid identities that harm others (eg "transracial"), generative AI, crypto/NFTS, racists/zionists/rightists, blah blah blah, that stuff is all a no from me!<br />
+					Please don't take it personally if our friendship would be incompatible or try to pressure me into one! I do not make friends with anyone younger than my irl classmates, which is 16+<br />
 				</div>
 			</div>
 			<div class="paragraph ripples" style="animation-delay: -1s">
