just so people don't see it and try to lie to me

--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
 					• Please don't talk to me about NSFW or politics, and please ask if I am comfortable first before talking about religion<br />
 					• Please do not use disabilities and illnesses in your sense of humor around me (eg "that's acoustic", "that's cancerous", it just makes me uncomfortable!)<br />
 					• Proship and NSFW of minors (even if the minor is fictional), transid identities that harm others (eg "transracial"), generative AI, crypto/NFTS, racists/zionists/rightists, blah blah blah, that stuff is all a no from me!<br />
-					• Please don't take it personally if our friendship would be incompatible or try to pressure me into one! I do not make friends with anyone younger than my irl classmates, which is 16+<br />
+					• Please don't take it personally if our friendship would be incompatible or try to pressure me into one! I do not make friends with anyone younger than my irl classmates<br />
 				</div>
 			</div>
 			<div class="paragraph ripples" style="animation-delay: -1s">
