--- a/index.html
+++ b/index.html
@@ -1462,6 +1462,7 @@ const STYLES = [
 "Running.webp"
 "Flying.webp"
 "Gia.webp"
+"Calliope.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
