forgot to add this

--- a/index.html
+++ b/index.html
@@ -1463,6 +1463,7 @@ const STYLES = [
 "Flying.webp"
 "Gia.webp"
 "Calliope.webp"
+"Nikki.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
