--- a/index.html
+++ b/index.html
@@ -1480,6 +1480,7 @@ const STYLES = [
 "Patch Base.webp"
 "Sillii Silly Femboy.webp"
 "Dancing in the Hues.webp"
+"Jitter.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: false
 	}, {
