bit upset by things

--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
 			<div class="paragraph ripples" style="animation-delay: -0.5s">
 				<div class="bullet"></div>
 				<div class="text">
-					<b class="rainbow" style="animation-delay: 2s">YES</b>: Ask me about art trades!<br />
+					<b class="rainbow" style="animation-delay: 2s">YES</b>: Ask me about commission exemptions (even if it says they're closed) or different art style options!<br />
 					• Show me things or ask for feedback on your art, I don't mind! :3<br />
 					• Use my art or draw my characters, just so long as you give credit and don't repost my art places for your own clout!<br />
 					• Drawing my OCs interacting with your OCs, if you think your characters would be friends with any of mine please go ahead, I'd love to see it!<br />
@@ -1042,7 +1042,7 @@
 			<div class="paragraph ripples" style="animation-delay: -0.75s">
 				<div class="bullet"></div>
 				<div class="text">
-					<b class="rainbow" style="animation-delay: 3s">NO</b>: Requests are usually closed!<br />
+					<b class="rainbow" style="animation-delay: 3s">NO</b>: Requests are usually closed and art trades are for friends only!<br />
 					• Please don't talk to me about NSFW or politics, and please ask if I am comfortable first before talking about religion<br />
 					• Please do not use disabilities and illnesses in your sense of humor around me (eg "that's acoustic", "that's cancerous", it just makes me uncomfortable!)<br />
 					• Proship and NSFW of minors (even if the minor is fictional), transid identities that harm others (eg "transracial"), generative AI, crypto/NFTS, racists/zionists/rightists, blah blah blah, that stuff is all a no from me!<br />
@@ -1602,6 +1602,7 @@ Non-Anime Shows & Movies
 - The Amazing Digital Circus
 - The Amazing World of Gumball
 - The Cuphead Show
+- The Hunger Games series
 - The Knuckles Paramount Series
 - The Lion Guard
 - The Lion King movies
