--- a/index.html
+++ b/index.html
@@ -1464,6 +1464,7 @@ const STYLES = [
 "Gia.webp"
 "Calliope.webp"
 "Nikki.webp"
+"they deserve to never be loved.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
