redo commits to remove extra file

--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
 			<span class="dog-worm"><a class="bob" style="margin-left: -80px; margin-top: -15px; animation-delay: -3s" href="https://reddit.com/u/cocobeanzies">
 				<i class="fa fa-reddit-alien worm" style="animation-delay: -3s" aria-hidden="true"></i>
 			</a></span>
-			<span class="dog-worm"><a class="bob" style="margin-left: -40px; margin-top: -15px; animation-delay: -2s" href="https://tumblr.com/cocobeanzies">
+			<span class="dog-worm"><a class="bob" style="margin-left: -40px; margin-top: -15px; animation-delay: -2s" href="https://cocobeanzies.tumblr.com/">
 				<i class="fa fa-tumblr-square worm" style="animation-delay: -2s" aria-hidden="true"></i>
 			</a></span>
 			<span class="dog-worm"><a class="bob" style="margin-left: 0px; margin-top: -15px; animation-delay: -1s" href="https://youtube.com/@cocobeanzies">
@@ -1055,7 +1055,7 @@
 					<b class="rainbow" style="animation-delay: 4s">SOCIAL MEDIA</b>:<br />
 					<a class="glow-a" style="animation-delay: 0.0s" href="https://toyhou.se/cocobeanzies">Toyhouse</a> is for all the in-depth information on my silly litol bapeys<br />
 					<a class="glow-a" style="animation-delay: 0.3s" href="https://reddit.com/u/cocobeanzies">Reddit</a> I pretty much just use to comment on things now LOL<br />
-					<a class="glow-a" style="animation-delay: 0.6s" href="https://tumblr.com/cocobeanzies">Tumblr</a> is my main social media and gallery of artwork, I post everything on there!!!<br />
+					<a class="glow-a" style="animation-delay: 0.6s" href="https://cocobeanzies.tumblr.com/">Tumblr</a> is my main social media and gallery of artwork, I post everything on there!!!<br />
 					<a class="glow-a" style="animation-delay: 0.9s" href="https://youtube.com/@cocobeanzies">YouTube</a> I hope to make more animations hooray!!!!!!<br />
 					<a class="glow-a" style="animation-delay: 1.2s" href="https://artfight.net/~Illouminant">Art Fight</a> WE BATTLE TO THE DEATH WUAHAHAHAHAHA<br />
 					<a class="glow-a" style="animation-delay: 1.5s" href="https://github.com/cocobeanzies">GitHub</a> just exists :P I update my Chinese study notes and stuff there<br />
@@ -1444,6 +1444,7 @@ const STYLES = [
 "Tewbre_Roblox_Banner.webp"
 "Tewbre_Roblox.webp"
 "Tewbre_Movies_Banner.webp"
+"TSG Cover Cropped.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
@@ -1465,6 +1466,12 @@ const STYLES = [
 "Calliope.webp"
 "Nikki.webp"
 "they deserve to never be loved.webp"
+"Smudge Yeah!.webp"
+"Yeah!.webp"
+"Gaming Through the Sunset.webp"
+"Crown.webp"
+"Michu.webp"
+"Spooks.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
@@ -1482,20 +1489,29 @@ const STYLES = [
 "Sillii Silly Femboy.webp"
 "Dancing in the Hues.webp"
 "Jitter.webp"
+"Silli Moon.webp"
+"Smudge and TSG.webp"
+"Hy.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: false
 	}, {
 		name: "Animated",
 		path: "animated",
 		images: `
+"Silli_Yapping_1.avif"
 "Comet_Chibi.avif"
 "Funfetti_Running.avif"
 "Go.avif"
 "Headbop.avif"
 "Left_Right_Left_Right.avif"
 "Milk_Singing.avif"
+"POPLIFE_-_Animation_Meme_MV.avif"
+"POPLIFE_-_Animation_Meme_MV_2.avif"
+"POPLIFE_-_Animation_Meme_MV_3.avif"
+"POPLIFE_-_Animation_Meme_MV_4.avif"
+"POPLIFE_-_Animation_Meme_MV_5.avif"
+"POPLIFE_-_Animation_Meme_MV_6.avif"
 "Silli_Chibi.avif"
-"Silli_Yapping_1.avif"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		animated: true,
 		shuffle: false
@@ -1525,6 +1541,7 @@ Anime
 Bands/Singers
 - Ark8de
 - Arrows to Athens
+- bbno$
 - Bring Me The Horizon
 - Coldplay
 - Crown the Empire
@@ -1532,10 +1549,9 @@ Bands/Singers
 - DM Dokuro
 - EDEN
 - Femtanyl
-- Grandson
 - Green Day
 - Guns N' Roses
-- Hatsune Miku artists
+- Hatsune Miku + other vocaloids
 - Hyper Potions
 - Jack Stauber
 - Jellyrox
@@ -1546,11 +1562,13 @@ Bands/Singers
 - Michael Jackson
 - My Chemical Romance
 - My Little Pony songs
+- Owl City
 - Panic! at the Disco
 - Pokémon songs + music
 - Porter Robinson
+- Prince Whateverer
 - Set It Off
-- Skillet
+- suzie
 - Sonic the Hedgehog songs + music
 - WavePlasma :3
 - YonKaGor
@@ -1577,11 +1595,14 @@ Games
 - Pokémon Mainline Games
 - Pokémon Mobile Games
 - Pokémon Mystery Dungeon
+- Puyo Puyo Tetris 2
 - Rain World
 - Sigmund Corp. Series
 - Sonic the Hedgehog
 - Stray
 - Terraria
+- Tetris Effect Connected
+- Tetris SNES
 - Undertale
 - Wobbledogs
 Non-Anime Shows & Movies
@@ -1617,6 +1638,7 @@ Misc
 - Lost Media
 - Plushie and Toys Collecting
 - Pokémon Shiny Hunting
+- Pokémon Trading Card Game
 - Roller Coasters
 - Science & Computer Science
 - Space
