remembered a band I love <3

--- a/index.html
+++ b/index.html
@@ -1562,6 +1562,7 @@ Bands/Singers
 - Michael Jackson
 - My Chemical Romance
 - My Little Pony songs
+- OneRepublic
 - Owl City
 - Panic! at the Disco
 - Pokémon songs + music
