I like this drawing lol

--- a/index.html
+++ b/index.html
@@ -1492,6 +1492,7 @@ const STYLES = [
 "Silli Moon.webp"
 "Smudge and TSG.webp"
 "Hy.webp"
+"✨2025-05-02 🖌️3.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: false
 	}, {
