--- a/index.html
+++ b/index.html
@@ -1550,11 +1550,13 @@ Bands/Singers
 - DM Dokuro
 - EDEN
 - Femtanyl
+- Fox Stevenson
 - Green Day
 - Guns N' Roses
 - Hatsune Miku + other vocaloids
 - Hyper Potions
 - Jack Stauber
+- Jake Hill
 - Jellyrox
 - kennyoung
 - kittydoggo
