--- a/index.html
+++ b/index.html
@@ -1445,6 +1445,7 @@ const STYLES = [
 "Tewbre_Roblox.webp"
 "Tewbre_Movies_Banner.webp"
 "TSG Cover Cropped.webp"
+"Cosmic Winds!.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
@@ -1472,6 +1473,7 @@ const STYLES = [
 "Crown.webp"
 "Michu.webp"
 "Spooks.webp"
+"A Very Silli Birthday.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
