--- a/index.html
+++ b/index.html
@@ -1495,6 +1495,7 @@ const STYLES = [
 "Smudge and TSG.webp"
 "Hy.webp"
 "✨2025-05-02 🖌️3.webp"
+"Celestial Elegance.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: false
 	}, {
