--- a/index.html
+++ b/index.html
@@ -1533,7 +1533,7 @@ Anime
 - Beastars
 - Death Note
 - Dragon Ball
-- Dragon Ball Z + spinoffs
+- Dragon Ball Z
 - Lucky Star
 - Naruto
 - Pokémon Horizons
@@ -1545,7 +1545,6 @@ Anime
 Bands/Singers
 - Ark8de
 - Arrows to Athens
-- bbno$
 - Bring Me The Horizon
 - Coldplay
 - Crown the Empire
@@ -1616,6 +1615,7 @@ Games
 Non-Anime Shows & Movies
 - Bluey
 - Gravity Falls
+- How to Train Your Dragon
 - Interstellar
 - Lego Monkie Kid
 - Murder Drones
@@ -1632,10 +1632,10 @@ Non-Anime Shows & Movies
 - The Amazing Digital Circus
 - The Amazing World of Gumball
 - The Cuphead Show
-- The Hunger Games series
+- The Hunger Games
 - The Knuckles Paramount Series
 - The Lion Guard
-- The Lion King movies
+- The Lion King
 - YooHoo & Friends
 - Zootopia
 Misc
