--- a/index.html
+++ b/index.html
@@ -1474,6 +1474,7 @@ const STYLES = [
 "Michu.webp"
 "Spooks.webp"
 "A Very Silli Birthday.webp"
+"Love Finds its Way to the Girl.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
@@ -1496,6 +1497,7 @@ const STYLES = [
 "Hy.webp"
 "✨2025-05-02 🖌️3.webp"
 "Celestial Elegance.webp"
+"Check.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: false
 	}, {
