--- a/index.html
+++ b/index.html
@@ -967,32 +967,35 @@
 		</h1>
 		<h1 id="socials">
 			<img id="worm-galaxy" class="snake-score" src="https://cocobeanzies.mizabot.xyz/pictures/galaxy.webp">
-			<span class="dog-worm"><b class="bob playable snake-game-trigger" style="margin-left: calc(-165px - 0.25em); margin-top: -15px; animation-delay: 0s">
+			<span class="dog-worm"><b class="bob playable snake-game-trigger" style="margin-left: calc(-185px - 0.25em); margin-top: -15px; animation-delay: 0s">
 				<img src="https://cocobeanzies.mizabot.xyz/icons/dog-head.webp" alt="Delicious..." class="emoji worm" style="animation-delay: 0s; width: 1.5em">
 			</b></span>
-			<span class="dog-worm"><a class="bob" style="margin-left: -120px; margin-top: -15px; animation-delay: -4s" href="https://toyhou.se/cocobeanzies">
+			<span class="dog-worm"><a class="bob" style="margin-left: -140px; margin-top: -15px; animation-delay: -4s" href="https://toyhou.se/cocobeanzies">
 				<img src="https://cocobeanzies.mizabot.xyz/icons/toyhouse.png" alt="https://toyhou.se/cocobeanzies" class="emoji worm" style="animation-delay: -4s">
 			</a></span>
-			<span class="dog-worm"><a class="bob" style="margin-left: -80px; margin-top: -15px; animation-delay: -3s" href="https://reddit.com/u/cocobeanzies">
+			<span class="dog-worm"><a class="bob" style="margin-left: -100px; margin-top: -15px; animation-delay: -3s" href="https://reddit.com/u/cocobeanzies">
 				<i class="fa fa-reddit-alien worm" style="animation-delay: -3s" aria-hidden="true"></i>
 			</a></span>
-			<span class="dog-worm"><a class="bob" style="margin-left: -40px; margin-top: -15px; animation-delay: -2s" href="https://cocobeanzies.tumblr.com/">
+			<span class="dog-worm"><a class="bob" style="margin-left: -60px; margin-top: -15px; animation-delay: -2s" href="https://cocobeanzies.tumblr.com/">
 				<i class="fa fa-tumblr-square worm" style="animation-delay: -2s" aria-hidden="true"></i>
 			</a></span>
-			<span class="dog-worm"><a class="bob" style="margin-left: 0px; margin-top: -15px; animation-delay: -1s" href="https://youtube.com/@cocobeanzies">
+			<span class="dog-worm"><a class="bob" style="margin-left: -21px; margin-top: -15px; animation-delay: -1s" href="https://youtube.com/@cocobeanzies">
 				<i class="fa fa-youtube-play worm" style="animation-delay: -1s" aria-hidden="true"></i>
 			</a></span>
-			<span class="dog-worm"><a class="bob" style="margin-left: 40px; margin-top: -15px; animation-delay: 0s" href="https://artfight.net/~cocobeanzies">
+			<span class="dog-worm"><a class="bob" style="margin-left: 20px; margin-top: -15px; animation-delay: 0s" href="https://artfight.net/~cocobeanzies">
 				<img src="https://cocobeanzies.mizabot.xyz/icons/artfight.png" alt="https://artfight.net/~cocobeanzies" class="emoji worm" style="animation-delay: 0s">
 			</a></span>
-			<span class="dog-worm"><a class="bob" style="margin-left: 80px; margin-top: -15px; animation-delay: -4s" href="https://github.com/cocobeanzies">
+			<span class="dog-worm"><a class="bob" style="margin-left: 60px; margin-top: -15px; animation-delay: -4s" href="https://github.com/cocobeanzies">
 				<i class="fa fa-github worm" style="animation-delay: -4s" aria-hidden="true"></i>
 			</a></span>
-			<span class="dog-worm"><a class="bob" style="margin-left: 116px; margin-top: -15px; animation-delay: -3s" href="https://bsky.app/profile/did:plc:i6vmrvbfeo7qlvi6iuebvoft">
+			<span class="dog-worm"><a class="bob" style="margin-left: 97px; margin-top: -15px; animation-delay: -3s" href="https://bsky.app/profile/did:plc:i6vmrvbfeo7qlvi6iuebvoft">
 				<img src="https://cocobeanzies.mizabot.xyz/icons/bluesky.png" alt="https://bsky.app/profile/did:plc:i6vmrvbfeo7qlvi6iuebvoft" class="emoji worm" style="animation-delay: -3s">
 			</a></span>
-			<span class="dog-worm"><b class="bob playable dog-theme-trigger" style="margin-left: calc(165px - 0.25em); margin-top: -15px; animation-delay: -2s" onclick="playAudio('dog-theme')">
-				<img src="https://cocobeanzies.mizabot.xyz/icons/dog-tail.webp" alt="It's not over yet!" class="emoji worm" style="animation-delay: -2s; width: 1.5em">
+			<span class="dog-worm"><a class="bob" style="margin-left: 140px; margin-top: -15px; animation-delay: -2s" href="https://trello.com/b/9gr2F2jz">
+				<i class="fa fa-trello worm" style="animation-delay: -2s" aria-hidden="true"></i>
+			</a></span>
+			<span class="dog-worm"><b class="bob playable dog-theme-trigger" style="margin-left: calc(185px - 0.25em); margin-top: -15px; animation-delay: -1s" onclick="playAudio('dog-theme')">
+				<img src="https://cocobeanzies.mizabot.xyz/icons/dog-tail.webp" alt="It's not over yet!" class="emoji worm" style="animation-delay: -1s; width: 1.5em">
 			</b></span>
 		</h1>
 		<br />
@@ -1059,7 +1062,8 @@
 					<a class="glow-a" style="animation-delay: 0.9s" href="https://youtube.com/@cocobeanzies">YouTube</a> I hope to make more animations hooray!!!!!!<br />
 					<a class="glow-a" style="animation-delay: 1.2s" href="https://artfight.net/~Illouminant">Art Fight</a> WE BATTLE TO THE DEATH WUAHAHAHAHAHA<br />
 					<a class="glow-a" style="animation-delay: 1.5s" href="https://github.com/cocobeanzies">GitHub</a> just exists :P I update my Chinese study notes and stuff there<br />
-					<a class="glow-a" style="animation-delay: 1.8s" href="https://bsky.app/profile/did:plc:i6vmrvbfeo7qlvi6iuebvoft">Bluesky</a> is a shared account for me and WavePlasma to evacuate Twitter
+					<a class="glow-a" style="animation-delay: 1.8s" href="https://bsky.app/profile/did:plc:i6vmrvbfeo7qlvi6iuebvoft">Bluesky</a> is a shared account for me and WavePlasma to evacuate Twitter<br />
+					<a class="glow-a" style="animation-delay: 2.1s" href="https://trello.com/b/9gr2F2jz">Trello</a> is my public to-do list! Feel free to keep an eye on it if you want to see my progress through owed art but are too shy to ask for updates (mood).
 				</div>
 			</div>
 		</div>
