random thing that's bothering me

--- a/index.html
+++ b/index.html
@@ -1074,13 +1074,13 @@
 				<div class="bullet"></div>
 				<div class="text">
 					<b class="rainbow" style="animation-delay: 4s">SOCIAL MEDIA</b>:<br />
-					<a class="glow-a" style="animation-delay: 0.0s" href="https://toyhou.se/cocobeanzies">Toyhouse</a> is for all the in-depth information on my silly litol bapeys<br />
-					<a class="glow-a" style="animation-delay: 0.3s" href="https://reddit.com/u/cocobeanzies">Reddit</a> I pretty much just use to comment on things now LOL<br />
+					<a class="glow-a" style="animation-delay: 0.0s" href="https://toyhou.se/cocobeanzies">Toyhouse</a> is for all the in-depth information on my silly litol bapeys.<br />
+					<a class="glow-a" style="animation-delay: 0.3s" href="https://reddit.com/u/cocobeanzies">Reddit</a> I pretty much just use to comment on things now LOL!<br />
 					<a class="glow-a" style="animation-delay: 0.6s" href="https://cocobeanzies.tumblr.com/">Tumblr</a> is my main social media and gallery of artwork, I post everything on there!!!<br />
 					<a class="glow-a" style="animation-delay: 0.9s" href="https://youtube.com/@cocobeanzies">YouTube</a> I hope to make more animations hooray!!!!!!<br />
 					<a class="glow-a" style="animation-delay: 1.2s" href="https://artfight.net/~Illouminant">Art Fight</a> WE BATTLE TO THE DEATH WUAHAHAHAHAHA<br />
-					<a class="glow-a" style="animation-delay: 1.5s" href="https://github.com/cocobeanzies">GitHub</a> just exists :P I update my Chinese study notes and stuff there<br />
-					<a class="glow-a" style="animation-delay: 1.8s" href="https://bsky.app/profile/did:plc:i6vmrvbfeo7qlvi6iuebvoft">Bluesky</a> is a shared account for me and WavePlasma to evacuate Twitter<br />
+					<a class="glow-a" style="animation-delay: 1.5s" href="https://github.com/cocobeanzies">GitHub</a> just exists :P I update my Chinese study notes and stuff there.<br />
+					<a class="glow-a" style="animation-delay: 1.8s" href="https://bsky.app/profile/did:plc:i6vmrvbfeo7qlvi6iuebvoft">Bluesky</a> is a shared account for me and WavePlasma to evacuate Twitter.<br />
 					<a class="glow-a" style="animation-delay: 2.1s" href="https://trello.com/b/9gr2F2jz">Trello</a> is my public to-do list! Feel free to keep an eye on it if you want to see my progress through owed art but are too shy to ask for updates (mood).
 				</div>
 			</div>
