--- a/index.html
+++ b/index.html
@@ -1521,6 +1521,9 @@ const STYLES = [
 "✨2025-05-02 🖌️3.webp"
 "Celestial Elegance.webp"
 "Check.webp"
+"Snenna.webp"
+"SixFanarts.webp"
+"Silli Page.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: false
 	}, {
