--- a/index.html
+++ b/index.html
@@ -1075,8 +1075,8 @@
 				<div class="text">
 					<b class="rainbow" style="animation-delay: 4s">SOCIAL MEDIA</b>:<br />
 					<a class="glow-a" style="animation-delay: 0.0s" href="https://toyhou.se/cocobeanzies">Toyhouse</a> is for all the in-depth information on my silly litol bapeys.<br />
-					<a class="glow-a" style="animation-delay: 0.3s" href="https://reddit.com/u/cocobeanzies">Reddit</a> I pretty much just use to comment on things now LOL!<br />
-					<a class="glow-a" style="animation-delay: 0.6s" href="https://cocobeanzies.tumblr.com/">Tumblr</a> is my main social media and gallery of artwork, I post everything on there!!!<br />
+					<a class="glow-a" style="animation-delay: 0.3s" href="https://reddit.com/u/cocobeanzies">Reddit</a> I pretty much just use to comment on things now LOL<br />
+					<a class="glow-a" style="animation-delay: 0.6s" href="https://cocobeanzies.tumblr.com/">Tumblr</a> is my main social media, I post everything on there!!!<br />
 					<a class="glow-a" style="animation-delay: 0.9s" href="https://youtube.com/@cocobeanzies">YouTube</a> I hope to make more animations hooray!!!!!!<br />
 					<a class="glow-a" style="animation-delay: 1.2s" href="https://artfight.net/~Illouminant">Art Fight</a> WE BATTLE TO THE DEATH WUAHAHAHAHAHA<br />
 					<a class="glow-a" style="animation-delay: 1.5s" href="https://github.com/cocobeanzies">GitHub</a> just exists :P I update my Chinese study notes and stuff there.<br />
