--- a/index.html
+++ b/index.html
@@ -1310,6 +1310,8 @@ const STAMPS = `
 "1167785806270828684.gif"
 "1167785958452756580.gif"
 "85987713-igj-QFx-Gw-Uo3fx-Db-1.webp"
+"IMG_6182.webp"
+"IMG_6130.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length });
 
 /// Left Sidebar Stamps
