Pre-July updating yeye

--- a/index.html
+++ b/index.html
@@ -1503,6 +1503,8 @@ const STYLES = [
 "Breezie and Melatonin.webp"
 "Beverly.webp"
 "Eevee.webp"
+"Pyra.webp"
+"Moonlight.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
