--- a/index.html
+++ b/index.html
@@ -1006,8 +1006,8 @@
 			<span class="dog-worm"><a class="bob" style="margin-left: 60px; margin-top: -15px; animation-delay: -4s" href="https://github.com/cocobeanzies">
 				<i class="fa fa-github worm" style="animation-delay: -4s" aria-hidden="true"></i>
 			</a></span>
-			<span class="dog-worm"><a class="bob" style="margin-left: 97px; margin-top: -15px; animation-delay: -3s" href="https://bsky.app/profile/did:plc:i6vmrvbfeo7qlvi6iuebvoft">
-				<img src="https://cocobeanzies.mizabot.xyz/icons/bluesky.png" alt="https://bsky.app/profile/did:plc:i6vmrvbfeo7qlvi6iuebvoft" class="emoji worm" style="animation-delay: -3s">
+			<span class="dog-worm"><a class="bob" style="margin-left: 97px; margin-top: -15px; animation-delay: -3s" href="https://bsky.app/profile/wavebeanzies.bsky.social">
+				<img src="https://cocobeanzies.mizabot.xyz/icons/bluesky.png" alt="https://bsky.app/profile/wavebeanzies.bsky.social" class="emoji worm" style="animation-delay: -3s">
 			</a></span>
 			<span class="dog-worm"><a class="bob" style="margin-left: 140px; margin-top: -15px; animation-delay: -2s" href="https://trello.com/b/9gr2F2jz">
 				<i class="fa fa-trello worm" style="animation-delay: -2s" aria-hidden="true"></i>
@@ -1080,7 +1080,7 @@
 					<a class="glow-a" style="animation-delay: 0.9s" href="https://youtube.com/@cocobeanzies">YouTube</a> I hope to make more animations hooray!!!!!!<br />
 					<a class="glow-a" style="animation-delay: 1.2s" href="https://artfight.net/~Illouminant">Art Fight</a> WE BATTLE TO THE DEATH WUAHAHAHAHAHA<br />
 					<a class="glow-a" style="animation-delay: 1.5s" href="https://github.com/cocobeanzies">GitHub</a> just exists :P I update my Chinese study notes and stuff there.<br />
-					<a class="glow-a" style="animation-delay: 1.8s" href="https://bsky.app/profile/did:plc:i6vmrvbfeo7qlvi6iuebvoft">Bluesky</a> is a shared account for me and WavePlasma to evacuate Twitter.<br />
+					<a class="glow-a" style="animation-delay: 1.8s" href="https://bsky.app/profile/wavebeanzies.bsky.social">Bluesky</a> is a shared account for me and WavePlasma to evacuate Twitter.<br />
 					<a class="glow-a" style="animation-delay: 2.1s" href="https://trello.com/b/9gr2F2jz">Trello</a> is my public to-do list! Feel free to keep an eye on it if you want to see my progress through owed art but are too shy to ask for updates (mood).
 				</div>
 			</div>
