--- a/index.html
+++ b/index.html
@@ -1578,6 +1578,7 @@ Anime
 - Sonic X
 - Tokyo Ghoul
 Bands/Singers
+- AURORA
 - Ark8de
 - Arrows to Athens
 - Bring Me The Horizon
@@ -1618,7 +1619,6 @@ Bands/Singers
 Games
 - Animal Crossing
 - Bloons Monkey City
-- Bloons POP!
 - Bloons TD6
 - Cave Story
 - Cuphead
@@ -1638,8 +1638,8 @@ Games
 - Pokémon Mobile Games
 - Pokémon Mystery Dungeon
 - Puyo Puyo Tetris 2
-- Rain World
-- Sigmund Corp. Series
+- To The Moon Series
+- Sky: Children of the Light
 - Sonic the Hedgehog
 - Stray
 - Terraria
