Art Fight Update

--- a/index.html
+++ b/index.html
@@ -1505,6 +1505,16 @@ const STYLES = [
 "Eevee.webp"
 "Pyra.webp"
 "Moonlight.webp"
+"Wizzet.webp"
+"Stemi.webp"
+"Monster.webp"
+"Mocha.webp"
+"Mikkela♥.webp"
+"Macaroon.webp"
+"Le Proot.webp"
+"Full of Pizzer.webp"
+"Fruffernie!!!.webp"
+"Aster.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
@@ -1531,6 +1541,12 @@ const STYLES = [
 "Snenna.webp"
 "SixFanarts.webp"
 "Silli Page.webp"
+"Training Session.webp"
+"Ribbons!.webp"
+"Pretty Possum.webp"
+"Milky.webp"
+"Kiwa!.webp"
+"Crowpen.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: false
 	}, {
@@ -1551,6 +1567,7 @@ const STYLES = [
 "POPLIFE_-_Animation_Meme_MV_5.avif"
 "POPLIFE_-_Animation_Meme_MV_6.avif"
 "Silli_Chibi.avif"
+"Are You Serious....avif"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		animated: true,
 		shuffle: false
