--- a/index.html
+++ b/index.html
@@ -858,11 +858,6 @@
 			visibility: visible;
 		}
 
-		.autism {
-			color: white;
-			animation: none;
-		}
-
 		.non-selectable {
 			user-select: none; /* Standard syntax */
 			/* For older browsers */
@@ -1130,7 +1125,7 @@
 		<hr class="rainbow-hr" style="width: 60%">
 		<div id="bottom" style="display: grid">
 			<p style="justify-self: center; margin: 0px">Website made with <a class="peepys-theme" onclick="peepysTheme()">🏳️‍🌈</a>, <a class="rick-roll" onclick="rickRoll()">💜</a> and <a class="bad-apple" onclick="badApple()">🍎</a> by <a class="rainbow" href="https://ko-fi.com/waveplasma">txin/WavePlasma</a>!</p>
-			<p style="justify-self: center; margin: 0px; color: #efefef">(And Coco's endless <a class="autism" href="https://wikipedia.org/wiki/Autism">Autism</a>)</p>
+			<p style="justify-self: center; margin: 0px; color: #efefef">(And Coco's endless <a href="https://wikipedia.org/wiki/Autism" style="color: white; animation: none">Autism</a>)</p>
 			<img id="banner2" src="https://cocobeanzies.mizabot.xyz/pictures/Roseland.webp">
 		</div>
 	</div>
